# http-client-unix-domain-socket

./: Cargo.toml  README.md
src/: client.rs  client_json.rs  error.rs  lib.rs
src/test_helpers/: server.rs  util.rs
